# rustcli

./: Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
scripts/: package.ps1  release.ps1
src/: main.rs
src/mcp/: client.rs  config.rs  host.rs  mod.rs
