[package]
name = "rust-openai-chat"
version = "0.1.6"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0"
dialoguer = "0.11"
futures-util = "0.3"
