[package]
name = "rust-openai-chat"
version = "0.1.7"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0"
dialoguer = "0.11"
futures-util = "0.3"
serde_yaml = "0.9"
schemars = "0.8"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
